# codex_proxy_for_all_models

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  codex_proxy_for_all_models.py  glm_proxy.py  pyproject.toml  test_thinking.py
.github/workflows/: ci.yml
.superpowers/sdd/: task-1-report.md
config-examples/: codex-pool.toml  codex.config.toml  nvidia-build.env.example  ollama.env.example  openrouter.env.example
docs/: architecture.md  codex-setup.md  devto-medium-facebook-launch.md  nvidia-pools.md  provider-compatibility.md  providers.md  publishing.md  release-notes-v0.2.md  troubleshooting.md
docs/superpowers/plans/: 2026-07-04-codex-pool-router-implementation.md
docs/superpowers/specs/: 2026-07-04-codex-pool-router-design.md
examples/: codex_config.toml
scripts/: codex-glm.bat  codex-glm.sh  codex-proxy.bat  codex-proxy.sh  generate_readme_media.py  install-codex-config.ps1  install-codex-config.sh  start-proxy.ps1  start-proxy.sh  validate-provider.bat  validate-provider.sh
src/codex_proxy_for_all_models/: __init__.py  catalog.py  cli.py  config.py  pool_config.py  protocol.py  providers.py  router.py  server.py
tests/: test_catalog.py  test_config.py  test_pool_config.py  test_protocol.py  test_providers.py  test_router.py  test_server.py
website/: package-lock.json
website/src/layouts/: Layout.astro
website/src/pages/: index.astro
website/src/styles/: global.css
